--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- index.html -->
+​<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -81,30 +81,35 @@
             <p class="planets-subtitle">Realistic cosmic pricing for your digital assets</p>
             <div class="planets-container">
                 <div class="planet-card mercury">
+                    <div class="planet-icon">☿</div>
                     <h3>Mercury</h3>
                     <p>Closest to the Sun</p>
                     <div class="planet-price">1.2 Trillion Credits</div>
                     <button class="btn-primary buy-btn" data-planet="mercury" data-price="1200000000000">Buy Now</button>
                 </div>
                 <div class="planet-card venus">
+                    <div class="planet-icon">♀</div>
                     <h3>Venus</h3>
                     <p>The hottest planet</p>
                     <div class="planet-price">2.8 Trillion Credits</div>
                     <button class="btn-primary buy-btn" data-planet="venus" data-price="2800000000000">Buy Now</button>
                 </div>
                 <div class="planet-card earth">
+                    <div class="planet-icon">♁</div>
                     <h3>Earth</h3>
                     <p>Our home planet</p>
                     <div class="planet-price">5.7 Trillion Credits</div>
                     <button class="btn-primary buy-btn" data-planet="earth" data-price="5700000000000">Buy Now</button>
                 </div>
                 <div class="planet-card mars">
+                    <div class="planet-icon">♂</div>
                     <h3>Mars</h3>
                     <p>The red planet</p>
                     <div class="planet-price">3.1 Trillion Credits</div>
                     <button class="btn-primary buy-btn" data-planet="mars" data-price="3100000000000">Buy Now</button>
                 </div>
                 <div class="planet-card jupiter">
+                    <div class="planet-icon">♃</div>
                     <h3>Jupiter</h3>
                     <p>Largest planet in our solar system</p>
                     <div class="planet-price">12.4 Trillion Credits</div>
@@ -142,6 +147,7 @@
             <span class="close">&times;</span>
             <h2 class="modal-title">Complete Your Purchase</h2>
             <div class="planet-preview">
+                <div class="planet-icon" id="modal-planet-icon"></div>
                 <h3 id="modal-planet-name">Planet Name</h3>
                 <p id="modal-planet-price">Price</p>
             </div>
